<resources>
    <string name="app_name">BowlingScoreKt</string>
    <string name="action_clear_all">Clear all</string>
    <string name="hint_word">Score</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Score not saved</string>
    <string name="score_saved">Score saved.</string>
    <string name="score_list_place_holder">Click on the button to add your first Score</string>
    <string name="calculate_score_button_label">calculate</string>
    <string name="save_score_button_label">save</string>
    <string name="clear_score_button_label">clear</string>
    <string name="total_score_label">Total Score: %d</string>
</resources>
