<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".addNewWord.view.NewScoreActivity">

    <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_word">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/scoreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/keyboard_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="9" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/keyMiss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/keySpare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="/" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="3" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/keyStrike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="X" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/keyPipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="|" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/keyBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="delete"
                app:icon="@drawable/ic_backspace_white_24dp" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateBtn"
        style="@style/CalculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/calculate_score_button_label" />

    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/resultScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/total_score_label"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearBtn"
                style="@style/CalculateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/resultScoreLabel"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/clear_score_button_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                style="@style/CalculateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/resultScoreLabel"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/save_score_button_label" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>